Fix collapse function at upload form.
The `collapse close` value was present in the HTML, but the Django admin
jQuery scripts were not loaded properly, hence the help box was always
visible.

--- a/filebrowser/templates/filebrowser/upload.html
+++ b/filebrowser/templates/filebrowser/upload.html
@@ -16,6 +16,7 @@
     {{ block.super }}
     <script type="text/javascript" src="{% static "admin/js/jquery.min.js" %}"></script>
     <script type="text/javascript" src="{% static "admin/js/jquery.init.js" %}"></script>
+    <script type="text/javascript" src="{% static "admin/js/collapse.min.js" %}"></script>
     <script type="text/javascript" src="../../jsi18n/"></script>
     <script type="text/javascript" src="{% static "filebrowser/js/fileuploader.js" %}"></script>
     <script type="text/javascript">
