--- a/filebrowser/templates/filebrowser/createdir.html
+++ b/filebrowser/templates/filebrowser/createdir.html
@@ -1,7 +1,7 @@
 {% extends "admin/base_site.html" %}
 
 <!-- LOADING -->
-{% load i18n adminmedia fb_tags fb_csrf admin_static %}
+{% load i18n fb_tags fb_csrf admin_static %}
 
 <!-- STYLESHEETS -->
 {% block extrastyle %}
