--- a/filebrowser/templates/filebrowser/detail.html
+++ b/filebrowser/templates/filebrowser/detail.html
@@ -1,7 +1,8 @@
 {% extends "admin/base_site.html" %}
 
 <!-- LOADING -->
-{% load i18n adminmedia fb_tags fb_versions admin_static %}
+{% load i18n fb_tags fb_versions admin_static %}
+{% load url from future %}
 
 <!-- STYLESHEETS -->
 {% block extrastyle %}
@@ -148,7 +149,7 @@
         <div class="submit-row">
             <input type="submit" value="{% trans 'Save' %}" class="default" />
             <p class="deletelink-box">
-                <a href="{% url filebrowser:fb_delete_confirm %}{% query_string %}" class="deletelink">{% trans "Delete" %}</a>
+                <a href="{% url 'filebrowser:fb_delete_confirm' %}{% query_string %}" class="deletelink">{% trans "Delete" %}</a>
             </p>
             <input type="submit" value="{% trans 'Save and continue editing' %}" name="_continue" />
         </div>
