--- a/filebrowser/templates/filebrowser/include/breadcrumbs.html
+++ b/filebrowser/templates/filebrowser/include/breadcrumbs.html
@@ -1,20 +1,21 @@
 {% load i18n fb_tags %}
+{% load url from future %}
 
 <div class="breadcrumbs">
     {% if not query.pop %}
         <a href="../../">{% trans "Home" %}</a> &rsaquo;
     {% endif %}
     {% if breadcrumbs or breadcrumbs_title %}
-        <a href="{% url filebrowser:fb_browse %}{% query_string "" "q,dir,filename,p" %}">{% trans 'FileBrowser' %}</a> &rsaquo;
+        <a href="{% url 'filebrowser:fb_browse' %}{% query_string "" "q,dir,filename,p" %}">{% trans 'FileBrowser' %}</a> &rsaquo;
     {% else %}
         {% trans 'FileBrowser' %}
     {% endif %}
     {% for item in breadcrumbs %}
         {% if not forloop.last %}
-            <a href="{% url filebrowser:fb_browse %}{% query_string "" "q,dir,filename,p" %}&amp;dir={{ item.1|urlencode }}">{{ item.0 }}</a> &rsaquo;
+            <a href="{% url 'filebrowser:fb_browse' %}{% query_string "" "q,dir,filename,p" %}&amp;dir={{ item.1|urlencode }}">{{ item.0 }}</a> &rsaquo;
         {% else %}
             {% if breadcrumbs_title %}
-                <a href="{% url filebrowser:fb_browse %}{% query_string "" "q,dir,filename,p" %}&amp;dir={{ item.1|urlencode }}">{{ item.0 }}</a> &rsaquo;
+                <a href="{% url 'filebrowser:fb_browse' %}{% query_string "" "q,dir,filename,p" %}&amp;dir={{ item.1|urlencode }}">{{ item.0 }}</a> &rsaquo;
             {% else %}
                 {{ item.0 }}
             {% endif %}
