--- a/filebrowser/templates/filebrowser/index.html
+++ b/filebrowser/templates/filebrowser/index.html
@@ -1,7 +1,8 @@
 {% extends "admin/base_site.html" %}
 
 <!-- LOADING -->
-{% load i18n adminmedia fb_tags fb_pagination admin_static %}
+{% load i18n fb_tags fb_pagination admin_static %}
+{% load url from future %}
 
 <!-- STYLESHEETS -->
 {% block extrastyle %}
@@ -74,8 +75,8 @@
         <!-- OBJECT-TOOLS -->
         {% block object-tools %}
         <ul class="object-tools">
-            <li><a href="{% url filebrowser:fb_createdir %}{% query_string '' 'p' %}">{% trans "New Folder" %}</a></li>
-            <li><a href="{% url filebrowser:fb_upload %}{% query_string '' 'p' %}" class="focus">{% trans "Upload" %}</a></li>
+            <li><a href="{% url 'filebrowser:fb_createdir' %}{% query_string '' 'p' %}">{% trans "New Folder" %}</a></li>
+            <li><a href="{% url 'filebrowser:fb_upload' %}{% query_string '' 'p' %}" class="focus">{% trans "Upload" %}</a></li>
         </ul>
         {% endblock %}
 
